@@ -1,3 +1,7 @@
+2013-March-19 Struan Robertson
+
+	* MolecularComponents.cpp/.h: Hessian rotational projection added.
+	
 2013-March-11 Struan Robertson
 
 	* MolecularComponents.cpp/.h: Utility methods added to gStructure class.
